[package]
name = "jikan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
colored = "2.0.0"
dialoguer = { version = "0.10.1", features = ["history", "completion"] }
dirs = "4.0.0"
dotenvy = "0.15.1"
itertools = "0.10.3"
pico-args = "0.4.2"
